# django-entity-rbac

./: .gitignore  LICENSE  README.md  pyproject.toml
django_entity_rbac/: constants.py  exceptions.py  models.py
roletestapp/: __init__.py  apps.py  mock_settings.py  models.py
roletestapp/migrations/: 0001_initial.py
roletestapp/test/: test_basic.py
